--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,7 +5,7 @@
 @import './variables/colors.css';
 
 html, body, #root {
-  --primary-font: 'Poppins', sans-serif;
+  --primary-font: 'Roboto', sans-serif;
 
   width: 100%;
   height: 100%;
