--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,11 +4,36 @@
 
 @import './variables/colors.css';
 
-html, body, #root {
+:root {
   --primary-font: 'Roboto', sans-serif;
+  --border-radius: 0.2rem;
 
+  --dark-blue-900: #25293C;
+  --dark-blue-700: #5D606F;
+  --dark-blue-200: #8196B0;
+
+  --light-blue-300: #1D72E2;
+  --light-blue-200: #0F76FF;
+  --light-blue-100: #7AAEF2;
+  --light-blue-50: #E8F2FF;
+
+  --light-gray-800: #999BA4;
+  --light-gray-50: #E3E3E3;
+  --light-gray-0: #FFFFFF;
+}
+
+html, body, #root {
   width: 100%;
   height: 100%;
 
+  color: var(--dark-blue-900);
+
   font-family: var(--primary-font);
+}
+
+:focus {
+  /* box-shadow: 0 0 5px #E8F2FF; */
+  /* padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px; */
+  /* border: 1px solid rgba(81, 203, 238, 1); */
 }
