--- a/src/app/views/chat/components/message-sending-form/message-sending-form.styles.css
+++ b/src/app/views/chat/components/message-sending-form/message-sending-form.styles.css
@@ -1,1 +1,29 @@
-/* message-sending-form */
+.message-sending-form {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  padding: 0.2em 0.4em;
+}
+
+.message-sending-form__text-field {
+  width: 100%;
+  height: 40px;
+  resize: none;
+}
+
+.message-sending-form__sbm-button {
+  margin-left: 0.6em;
+}
+
+.message-sending-form__text-field-container {
+  width: 100%;
+}
+
+.message-sending-form__text-field-container textarea {
+  width: 100%;
+}
+
+.message-sending-form__text-field {
+  width: 100%;
+}
