--- a/src/app/components/loading-spinner-ring/loading-spinner-ring.styles.css
+++ b/src/app/components/loading-spinner-ring/loading-spinner-ring.styles.css
@@ -1,4 +1,6 @@
 .lds-ring {
+  --lds-ring-color: var(--light-blue-200);
+
   display: inline-block;
   position: relative;
   width: 80px;
@@ -12,10 +14,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid var(--blue);
+  border: 8px solid var(--lds-ring-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: var(--blue) transparent transparent transparent;
+  border-color: var(--lds-ring-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
