--- a/src/app/views/test/test.styles.css
+++ b/src/app/views/test/test.styles.css
@@ -1,9 +1,12 @@
-.creating-chat-view {
+.test-page {
   width: 100%;
   height: 100%;
+}
 
+.test-page div {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
