--- a/src/app/views/creating-chat/creating-chat.styles.css
+++ b/src/app/views/creating-chat/creating-chat.styles.css
@@ -1,3 +1,9 @@
 .creating-chat-view {
-  /* creating-chat-view */
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
