--- a/src/app/views/home/home.styles.layout.css
+++ b/src/app/views/home/home.styles.layout.css
@@ -1,8 +1,16 @@
 .home-view {
   width: 100%;
   height: 100%;
-
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
+}
+
+.home-view__section {
+  display: flex;
+  flex-direction: row;
+}
+
+.home-view__section > * {
+  margin: 0 0.4em;
 }
