--- a/src/app/views/not-found/not-found.styles.layout.css
+++ b/src/app/views/not-found/not-found.styles.layout.css
@@ -6,3 +6,23 @@
   align-items: center;
   justify-content: center;
 }
+
+.not-found-view__section {
+  text-align: center;
+}
+
+.not-found__heading {
+  font-size: 2.8rem;
+  font-weight: bold;
+}
+
+.not-found__text {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2rem;
+}
+
+.not-found__text button {
+  margin-top: 0.4em;
+  margin-left: 0.4em;
+}
