--- a/src/assets/styles/variables/colors.css
+++ b/src/assets/styles/variables/colors.css
@@ -1,7 +1,1 @@
-:root {
-  --white: hsl(0, 0%, 100%);
-  --gray: hsl(210, 13%, 91%);
-  --light-gray: hsl(210, 100%, 99%);
-  --black: hsl(0, 0%, 0%);
-  --blue: hsl(209, 81%, 55%);
-}
+:root {}
